delete expertise li:before e rotacionei o titulo

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
     padding-bottom: 50px; /* Espaço para o footer */
 }
 
+.name-spin:hover {
+    transform: rotate(360deg);
+}
+
 /* Hero Section (Topo) */
 .hero-section {
     text-align: center;
@@ -79,12 +83,6 @@ body {
     position: relative;
 }
 
-.expertise li::before {
-    content: "✔️ "; /* Ícone de check */
-    position: absolute;
-    left: 0;
-    color: var(--primary-color);
-}
 
 /* Linha do Tempo (Jornada) */
 .timeline {
